# redis-search

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  README.md  pyproject.toml
docker/: .env  docker-compose.yml
inputs/: bar.md  redis.md  software-architecture.md
src/: __main__.py  script.py
src/types/: __init__.py  source.py  source_document.py  team.py
