[tool.poetry]
name = "redis-search"
version = "0.1.0"
description = "A script to explore semantic search in redis"
authors = ["Dan Frederick <dpfrederick@webstaurantstore.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
langchain = "^0.0.277"
tiktoken = "^0.4.0"
openai = "^0.28.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
poethepoet = "^0.24.0"
faker = "^19.9.0"
redis = "^5.0.1"
fakeredis = "^2.20.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
nox = "^2023.4.22"
pytest = "^7.4.1"
faker = "^19.12.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
lint = "local.lint:main"

[tool.poe.tasks]
test = "pytest -v"
check-tests = "pytest --collect-only -v"
lint = "flake8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
